created a landing page component

--- a/portfolio/public/output.css
+++ b/portfolio/public/output.css
@@ -594,10 +594,6 @@ video {
   position: relative;
 }
 
-.top-0{
-  top: 0px;
-}
-
 .bottom-0{
   bottom: 0px;
 }
@@ -608,6 +604,10 @@ video {
 
 .right-7{
   right: 1.75rem;
+}
+
+.top-0{
+  top: 0px;
 }
 
 .top-\[60\%\]{
@@ -627,36 +627,32 @@ video {
   margin-left: 33%;
 }
 
-.mr-2{
-  margin-right: 0.5rem;
-}
-
 .flex{
   display: flex;
-}
-
-.h-full{
-  height: 100%;
 }
 
 .h-3{
   height: 0.75rem;
 }
 
-.w-5\/6{
-  width: 83.333333%;
+.h-full{
+  height: 100%;
 }
 
-.w-full{
-  width: 100%;
+.w-3{
+  width: 0.75rem;
+}
+
+.w-5\/6{
+  width: 83.333333%;
 }
 
 .w-\[300px\]{
   width: 300px;
 }
 
-.w-3{
-  width: 0.75rem;
+.w-full{
+  width: 100%;
 }
 
 .resize{
@@ -679,12 +675,12 @@ video {
   justify-content: space-between;
 }
 
-.gap-16{
-  gap: 4rem;
-}
-
 .gap-10{
   gap: 2.5rem;
+}
+
+.gap-16{
+  gap: 4rem;
 }
 
 .gap-6{
@@ -693,16 +689,6 @@ video {
 
 .rounded-full{
   border-radius: 9999px;
-}
-
-.bg-deep-blue{
-  --tw-bg-opacity: 1;
-  background-color: rgb(1 0 38 / var(--tw-bg-opacity));
-}
-
-.bg-red{
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 68 146 / var(--tw-bg-opacity));
 }
 
 .bg-blue{
@@ -715,22 +701,37 @@ video {
   background-color: rgb(117 117 117 / var(--tw-bg-opacity));
 }
 
+.bg-deep-blue{
+  --tw-bg-opacity: 1;
+  background-color: rgb(1 0 38 / var(--tw-bg-opacity));
+}
+
+.bg-red{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 68 146 / var(--tw-bg-opacity));
+}
+
 .bg-yellow{
   --tw-bg-opacity: 1;
   background-color: rgb(253 204 73 / var(--tw-bg-opacity));
-}
-
-.p-2{
-  padding: 0.5rem;
 }
 
 .p-12{
   padding: 3rem;
 }
 
+.p-2{
+  padding: 0.5rem;
+}
+
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .font-opensans{
@@ -739,6 +740,11 @@ video {
 
 .font-playfair{
   font-family: Playfair Display, serif;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl{
@@ -751,11 +757,6 @@ video {
   line-height: 1.25rem;
 }
 
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .font-bold{
   font-weight: 700;
 }
@@ -764,14 +765,14 @@ video {
   font-weight: 600;
 }
 
-.text-yellow{
-  --tw-text-opacity: 1;
-  color: rgb(253 204 73 / var(--tw-text-opacity));
-}
-
 .text-deep-blue{
   --tw-text-opacity: 1;
   color: rgb(1 0 38 / var(--tw-text-opacity));
+}
+
+.text-yellow{
+  --tw-text-opacity: 1;
+  color: rgb(253 204 73 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -853,7 +854,19 @@ body,
 }
 
 @media (min-width: 1060px){
+  .md\:flex{
+    display: flex;
+  }
+
   .md\:h-full{
     height: 100%;
+  }
+
+  .md\:items-center{
+    align-items: center;
+  }
+
+  .md\:justify-between{
+    justify-content: space-between;
   }
 }
