--- a/portfolio/public/output.css
+++ b/portfolio/public/output.css
@@ -618,6 +618,10 @@ video {
   z-index: 40;
 }
 
+.z-10{
+  z-index: 10;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -655,6 +659,10 @@ video {
   width: 100%;
 }
 
+.basis-3\/5{
+  flex-basis: 60%;
+}
+
 .resize{
   resize: both;
 }
@@ -669,6 +677,10 @@ video {
 
 .justify-end{
   justify-content: flex-end;
+}
+
+.justify-center{
+  justify-content: center;
 }
 
 .justify-between{
@@ -854,6 +866,14 @@ body,
 }
 
 @media (min-width: 1060px){
+  .md\:order-2{
+    order: 2;
+  }
+
+  .md\:mt-32{
+    margin-top: 8rem;
+  }
+
   .md\:flex{
     display: flex;
   }
