--- a/portfolio/public/output.css
+++ b/portfolio/public/output.css
@@ -643,6 +643,11 @@ video {
   margin-right: auto;
 }
 
+.my-10{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
 .ml-20{
   margin-left: 5rem;
 }
@@ -749,6 +754,10 @@ video {
 
 .gap-6{
   gap: 1.5rem;
+}
+
+.gap-7{
+  gap: 1.75rem;
 }
 
 .rounded-full{
@@ -1046,6 +1055,10 @@ body,
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:opacity-50:hover{
+  opacity: 0.5;
 }
 
 .hover\:saturate-200:hover{
