--- a/portfolio/public/output.css
+++ b/portfolio/public/output.css
@@ -676,6 +676,14 @@ video {
   margin-top: 1.25rem;
 }
 
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
+.mt-32{
+  margin-top: 8rem;
+}
+
 .flex{
   display: flex;
 }
@@ -692,6 +700,14 @@ video {
   height: 100%;
 }
 
+.h-0{
+  height: 0px;
+}
+
+.h-0\.5{
+  height: 0.125rem;
+}
+
 .w-3{
   width: 0.75rem;
 }
@@ -706,6 +722,10 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-1\/3{
+  width: 33.333333%;
 }
 
 .max-w-\[400px\]{
@@ -862,6 +882,14 @@ video {
   padding-right: 0.125rem;
 }
 
+.pb-24{
+  padding-bottom: 6rem;
+}
+
+.pt-10{
+  padding-top: 2.5rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -894,6 +922,11 @@ video {
   line-height: 1.25rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -910,6 +943,11 @@ video {
 .text-yellow{
   --tw-text-opacity: 1;
   color: rgb(253 204 73 / var(--tw-text-opacity));
+}
+
+.text-red{
+  --tw-text-opacity: 1;
+  color: rgb(220 68 146 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -1109,6 +1147,10 @@ body,
     height: 100%;
   }
 
+  .md\:w-1\/3{
+    width: 33.333333%;
+  }
+
   .md\:max-w-\[400px\]{
     max-width: 400px;
   }
@@ -1127,6 +1169,10 @@ body,
 
   .md\:justify-between{
     justify-content: space-between;
+  }
+
+  .md\:gap-16{
+    gap: 4rem;
   }
 
   .md\:text-start{
