--- a/portfolio/public/output.css
+++ b/portfolio/public/output.css
@@ -594,6 +594,10 @@ video {
   position: fixed;
 }
 
+.absolute{
+  position: absolute;
+}
+
 .relative{
   position: relative;
 }
@@ -636,6 +640,10 @@ video {
 
 .z-40{
   z-index: 40;
+}
+
+.z-\[-1\]{
+  z-index: -1;
 }
 
 .mx-auto{
@@ -688,6 +696,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-3{
+  margin-top: 0.75rem;
+}
+
 .flex{
   display: flex;
 }
@@ -712,6 +724,10 @@ video {
   height: 100%;
 }
 
+.h-32{
+  height: 8rem;
+}
+
 .w-1\/3{
   width: 33.333333%;
 }
@@ -730,6 +746,10 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-1\/2{
+  width: 50%;
 }
 
 .max-w-\[400px\]{
@@ -782,6 +802,10 @@ video {
 
 .gap-7{
   gap: 1.75rem;
+}
+
+.gap-32{
+  gap: 8rem;
 }
 
 .rounded-full{
@@ -929,6 +953,11 @@ video {
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .font-bold{
@@ -1167,6 +1196,10 @@ body,
 
   .md\:w-1\/3{
     width: 33.333333%;
+  }
+
+  .md\:w-3\/4{
+    width: 75%;
   }
 
   .md\:max-w-\[400px\]{
