--- a/portfolio/public/output.css
+++ b/portfolio/public/output.css
@@ -586,6 +586,46 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 480px){
+  .container{
+    max-width: 480px;
+  }
+}
+
+@media (min-width: 620px){
+  .container{
+    max-width: 620px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1060px){
+  .container{
+    max-width: 1060px;
+  }
+}
+
+@media (min-width: 1200px){
+  .container{
+    max-width: 1200px;
+  }
+}
+
+@media (min-width: 1700px){
+  .container{
+    max-width: 1700px;
+  }
+}
+
 .visible{
   visibility: visible;
 }
@@ -656,6 +696,10 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -700,6 +744,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-7{
+  margin-top: 1.75rem;
+}
+
 .flex{
   display: flex;
 }
@@ -728,12 +776,20 @@ video {
   height: 100%;
 }
 
+.max-h-\[400px\]{
+  max-height: 400px;
+}
+
 .w-1\/2{
   width: 50%;
 }
 
 .w-1\/3{
   width: 33.333333%;
+}
+
+.w-2\/3{
+  width: 66.666667%;
 }
 
 .w-3{
@@ -841,6 +897,10 @@ video {
   background-color: rgb(1 0 38 / var(--tw-bg-opacity));
 }
 
+.bg-grey{
+  background-color: ededed;
+}
+
 .bg-red{
   --tw-bg-opacity: 1;
   background-color: rgb(220 68 146 / var(--tw-bg-opacity));
@@ -859,8 +919,16 @@ video {
   object-fit: scale-down;
 }
 
+.p-10{
+  padding: 2.5rem;
+}
+
 .p-12{
   padding: 3rem;
+}
+
+.p-16{
+  padding: 4rem;
 }
 
 .p-2{
@@ -906,6 +974,10 @@ video {
   padding-bottom: 6rem;
 }
 
+.pb-48{
+  padding-bottom: 12rem;
+}
+
 .pr-0{
   padding-right: 0px;
 }
@@ -916,6 +988,10 @@ video {
 
 .pt-10{
   padding-top: 2.5rem;
+}
+
+.pt-48{
+  padding-top: 12rem;
 }
 
 .text-center{
@@ -985,6 +1061,10 @@ video {
 
 .underline{
   text-decoration-line: underline;
+}
+
+.opacity-0{
+  opacity: 0;
 }
 
 .transition{
@@ -1142,6 +1222,10 @@ body,
   opacity: 0.5;
 }
 
+.hover\:opacity-90:hover{
+  opacity: 0.9;
+}
+
 .hover\:saturate-200:hover{
   --tw-saturate: saturate(2);
   -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1173,6 +1257,16 @@ body,
   }
 }
 
+@media (min-width: 768px){
+  .sm\:grid{
+    display: grid;
+  }
+
+  .sm\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
 @media (min-width: 1060px){
   .md\:order-2{
     order: 2;
@@ -1196,6 +1290,10 @@ body,
 
   .md\:w-1\/3{
     width: 33.333333%;
+  }
+
+  .md\:w-2\/5{
+    width: 40%;
   }
 
   .md\:w-3\/4{
