--- a/portfolio/public/output.css
+++ b/portfolio/public/output.css
@@ -882,6 +882,11 @@ video {
   border-top-right-radius: 9999px;
 }
 
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-blue{
   --tw-bg-opacity: 1;
   background-color: rgb(44 188 233 / var(--tw-bg-opacity));
@@ -897,10 +902,6 @@ video {
   background-color: rgb(1 0 38 / var(--tw-bg-opacity));
 }
 
-.bg-grey{
-  background-color: ededed;
-}
-
 .bg-red{
   --tw-bg-opacity: 1;
   background-color: rgb(220 68 146 / var(--tw-bg-opacity));
@@ -909,6 +910,10 @@ video {
 .bg-yellow{
   --tw-bg-opacity: 1;
   background-color: rgb(253 204 73 / var(--tw-bg-opacity));
+}
+
+.bg-grey{
+  background-color: ededed;
 }
 
 .bg-gradient-rainblue{
@@ -1067,10 +1072,6 @@ video {
   opacity: 0;
 }
 
-.opacity-5{
-  opacity: 0.05;
-}
-
 .transition{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, -webkit-transform, -webkit-filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1202,10 +1203,6 @@ body,
   border-color: rgb(253 204 73 / var(--tw-border-opacity));
 }
 
-.hover\:invisible:hover{
-  visibility: hidden;
-}
-
 .hover\:bg-blue:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(44 188 233 / var(--tw-bg-opacity));
@@ -1226,16 +1223,16 @@ body,
   color: rgb(253 204 73 / var(--tw-text-opacity));
 }
 
+.hover\:opacity-0:hover{
+  opacity: 0;
+}
+
 .hover\:opacity-50:hover{
   opacity: 0.5;
 }
 
 .hover\:opacity-90:hover{
   opacity: 0.9;
-}
-
-.hover\:opacity-0:hover{
-  opacity: 0;
 }
 
 .hover\:saturate-200:hover{
