changed prop names and project cover text

--- a/portfolio/public/output.css
+++ b/portfolio/public/output.css
@@ -781,12 +781,12 @@ video {
   height: 8rem;
 }
 
-.h-full{
-  height: 100%;
-}
-
 .h-64{
   height: 16rem;
+}
+
+.h-full{
+  height: 100%;
 }
 
 .max-h-\[400px\]{
@@ -1064,6 +1064,21 @@ video {
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold{
