--- a/portfolio/public/output.css
+++ b/portfolio/public/output.css
@@ -753,10 +753,6 @@ video {
   margin-top: 1.25rem;
 }
 
-.mt-7{
-  margin-top: 1.75rem;
-}
-
 .flex{
   display: flex;
 }
@@ -1024,6 +1020,10 @@ video {
   padding-top: 12rem;
 }
 
+.pt-24{
+  padding-top: 6rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -1061,24 +1061,14 @@ video {
   line-height: 1;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold{
